# dl_scratch

./: README.md  _pyproject.toml  install.sh  params.pkl  pyproject.toml  requirements.txt
dl_scratch/ch01/: demo.py
dl_scratch/ch05/: two_layer_net.py
dl_scratch/ch06/: batch_norm_demo.py  optimizer_compare_mnist.py  optimizer_compare_naive.py  weight_init_activation_histogram.py  weight_init_compare.py
dl_scratch/ch07/: simple_convnet.py  train_convnet.py
dl_scratch/common/: functions.py  layers.py  multi_layer_net.py  multi_layer_net_extend.py  optimizer.py  trainer.py  util.py
notebook/ch2/: ch2.ipynb
notebook/ch3/: ch3.ipynb
notebook/ch4/: ch4.ipynb
notebook/ch5/: ch5.ipynb
src_org/ch5/: 1two_layer_net.py
src_org/ch6/: optimizer_compare_mnist.py  optimizer_compare_naive.py
src_org/common/: layers.py  optimizer.py  util.py
test/test_common/: test_functions.py
