[tool.poetry]
name = "dl_scratch"
version = "0.1.0"
description = ""
authors = ["Joichiro433 <joichiro322@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.4"
pandas = "^1.3.0"
matplotlib = "^3.5.2"
scipy = "^1.7.0"
jupyterlab = "^3.4.2"
rich = "^12.4.4"
seaborn = "^0.11.2"
plotly = "^5.8.0"
coloredlogs = "^15.0.1"
opencv-python = "^4.5.5"
nptyping = "^2.1.1"
tensorflow = "^2.9.1"
pytest = "^7.1.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
